fix(navbar): make line transparent in collapse

--- a/client/app/modules/navbar/navbar.scss
+++ b/client/app/modules/navbar/navbar.scss
@@ -40,3 +40,7 @@ a.navbar-brand:hover {
 .navbar {
 	text-align: right;
 }
+
+.navbar-collapse {
+	border-top: 1px transparent!important;
+}
